--- a/package.json
+++ b/package.json
@@ -20,5 +20,14 @@
     "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
     "typescript": "^3.5.1"
+  },
+  "dependencies": {
+    "@open-rpc/meta-schema": "^1.5.3",
+    "@types/lodash.compact": "^3.0.6",
+    "@types/lodash.flatten": "^4.4.6",
+    "@types/lodash.mapvalues": "^4.6.6",
+    "lodash.compact": "^3.0.1",
+    "lodash.flatten": "^4.4.0",
+    "lodash.mapvalues": "^4.6.0"
   }
 }
