--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
+    "@open-rpc/meta-schema": "^1.5.3",
     "typescript": "^3.5.1"
-  },
-  "dependencies": {
-    "@open-rpc/meta-schema": "^1.5.3"
   }
 }
