--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "@etclabscore/json-schema-to-types",
-  "version": "1.0.0",
+  "version": "0.0.0-semantic-release-dev",
   "description": "",
-  "main": "build/index.js",
   "publishConfig": {
     "access": "public"
   },
+  "main": "build/src/index.js",
+  "files": [
+    "build",
+    "!build/**/*.test.*"
+  ],
   "scripts": {
-    "build": "tsc",
-    "lint": "tslint --fix -p .",
-    "test": "npm run lint && jest --coverage --verbose"
+    "build": "npm run build:code && npm run build:docs",
+    "build:docs": "typedoc",
+    "build:code": "tsc",
+    "test": "npm run test:lint && npm run test:unit",
+    "test:lint": "tslint -c tslint.json 'src/**/*.ts' --fix",
+    "test:unit": "jest --coverage",
+    "watch:test": "jest --watch"
   },
   "author": "",
   "license": "Apache-2.0",
