--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@open-rpc/meta-schema": "^1.5.3",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.6.8",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
-    "@open-rpc/meta-schema": "^1.5.3",
+    "typedoc": "^0.15.0",
     "typescript": "^3.5.1"
   }
 }
