fix: gh pages docs broken

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,32 @@
     "outDir": "./build",
     "strict": true,
     "esModuleInterop": true
+  },
+  "typedocOptions": {
+    "name": "@open-rpc/schema-utils-js",
+    "mode": "file",
+    "src": [ "./src/index.ts" ],
+    "out": "docs",
+    "includeDeclarations": true,
+    "excludeNotExported": true,
+    "excludePrivate": true,
+    "excludeProtected": true,
+    "hideGenerator": true,
+    "listInvalidSymbolLinks": true,
+    "readme": "./README.md",
+    "exclude": [
+      "node_modules",
+      "lib",
+      "docs",
+      "build",
+      "jest.config.js",
+      "src/**/*.test.ts"
+    ],
+    "toc": [
+      "JsonSchemaToTypes",
+      "traverse",
+      "CodeGen",
+      "ensureSubschemaTitles"
+    ]
   }
 }
