--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "build/src/index.js",
+  "main": "build/index.js",
   "files": [
     "build",
     "!build/**/*.test.*"
