--- a/package.json
+++ b/package.json
@@ -24,11 +24,17 @@
   "devDependencies": {
     "@open-rpc/meta-schema": "^1.5.3",
     "@types/jest": "^24.0.13",
+    "@types/lodash.deburr": "^4.1.6",
+    "@types/lodash.trim": "^4.5.6",
     "@types/node": "^12.6.8",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
     "typedoc": "^0.15.0",
     "typescript": "^3.5.1"
+  },
+  "dependencies": {
+    "lodash.deburr": "^4.1.0",
+    "lodash.trim": "^4.5.1"
   }
 }
