fix: update tsdoc tox

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
       "JsonSchemaToTypes",
       "traverse",
       "CodeGen",
-      "ensureSubschemaTitles"
+      "ensureSubschemaTitles",
+      "getDefaultTitleForSchema"
     ]
   }
 }
