--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/lodash.trim": "^4.5.6",
     "@types/node": "^12.6.8",
     "jest": "^24.8.0",
+    "json-schema-ref-parser": "^7.1.3",
     "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
     "typedoc": "^0.15.0",
