--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@open-rpc/meta-schema": "^1.5.3",
     "@types/jest": "^24.0.13",
+    "@types/json-schema": "^7.0.4",
     "@types/lodash.deburr": "^4.1.6",
     "@types/lodash.trim": "^4.5.6",
     "@types/node": "^12.6.8",
